@@ -141,6 +141,7 @@ std::string flow::new_filename(int *fd,int flags,int mode)
     /* Loop connection count until we find a file that doesn't exist */
     for(uint32_t connection_count=0;;connection_count++){
         std::string nfn = filename(connection_count);
+        if(nfn.find('/')!=std::string::npos) mkdirs_for_path(nfn.c_str());
         int nfd = open(nfn.c_str(),flags,mode);
         if(nfd>=0){
             *fd = nfd;
